fix: top-bar css

--- a/lib/components/top-bar/style.module.css
+++ b/lib/components/top-bar/style.module.css
@@ -16,7 +16,7 @@
   min-width: 4rem;
   height: 100%;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   padding-left: 0.5rem;
   background: rgba(0, 0, 0, 0.1);
