feat: use only system marker

--- a/lib/components/canvas/style.module.css
+++ b/lib/components/canvas/style.module.css
@@ -27,12 +27,22 @@
 }
 
 .marker {
-  background-color: red;
   border-radius: 50%;
   position: absolute;
+  transform: translate(-50%, -50%);
+  overflow: visible;
+  transition: all 100ms;
 }
 
-.icon_marker {
+.marker > svg {
+  color: red;
   position: absolute;
+  left: 50%;
+  top: 50%;
   transform: translate(-50%, -100%);
+}
+
+.marker:hover {
+  scale: 2;
+  transform: translate(-25%, -25%);
 }
