feat: add marker
* feat: add circle marker properties in props

* feat: connect circle marker props to canvas drawer

* fix: marker draw priority

* fix: allways show marker if it is provided

* refactor: rename cicle marker to marker

* refactor: position instead of center in Marker type

* chore: remove marker from canvas handler

* refactor: rename circle marker to marker

* chore(husky): pretify only changed files

* chore: use point as marker instead of circle

* chore: allow custom marker icon from props

* feat: use only system marker

* refactor: avoid repeatead codee

--- a/lib/components/canvas/style.module.css
+++ b/lib/components/canvas/style.module.css
@@ -25,3 +25,24 @@
   opacity: 1;
   color: #fff;
 }
+
+.marker {
+  border-radius: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  overflow: visible;
+  transition: all 100ms;
+}
+
+.marker > svg {
+  color: red;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -100%);
+}
+
+.marker:hover {
+  scale: 2;
+  transform: translate(-25%, -25%);
+}
